--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,110 @@
 * {
-    border: rgb(230, 34, 34) solid 2px;
-    margin: 0;
+  /*border: rgb(230, 34, 34) solid 2px;*/
+  margin: 0;
+  padding: 0;
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    background-color: #706e6e;
-    color: black;
+  display: flex;
+  background-color: #706e6e;
+  color: black;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px
 }
 
 h1 {
-    background-color: #5e5c5c;
-    padding: 15px 0px 0px 20px ;
+  font-size: 4em;
+  background-color: #8e7b7b;
+  padding: 10px;
+  border-radius: 35px;
 }
 
-.page-select {
-    background-color: rgb(47, 176, 24);
+#about-me-1 {
+  display: flex;
+  align-items: end;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+nav {
+  padding-right: 15px;
+  font-size: 20px;
+  /* background-color: #706e6e; */
+  display: flex;
+ 
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  padding-right: 20px;
+}
+
+
+
+.my-pic {
+  background-color: blue;
+  height: 145px;
+  width: 145px;
+}
+
+.about-me {
+  padding: 3%;
+}
+
+.projects{
     display: flex;
-    position: absolute;
-    right: 0;
-    top: 20px;
+    flex-wrap: wrap;
+}
+
+.imageBox {
+  display: flex;
+  margin: 5px;
+  min-height: 25%;
+  max-height: 25%;
+  flex-basis: calc(50% - 1em);
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex a div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.web-image {
+  width: 100%;
+}
+
+.first{
+    flex-basis: 100%;
+    max-height: 100%;
 } 
+.prework {
+   
+    width: 100%;
+
+  /* height: 25%;
+
+    margin-left: auto; */
+}
+.web-image:hover {
+  opacity: .5;
+}
 
 
+@media screen and (max-width: 768px){
+    .projects{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+}
