--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-  /*border: rgb(230, 34, 34) solid 2px;*/
+  /*border: rgb(230, 34, 34) solid 1px;*/
   margin: 0;
   padding: 0;
 }
@@ -21,6 +21,11 @@ h1 {
   border-radius: 35px;
 }
 
+h2 {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-top:black solid 2px;
+}
+
 #about-me-1 {
   display: flex;
   align-items: end;
@@ -35,7 +40,7 @@ nav {
   font-size: 20px;
   /* background-color: #706e6e; */
   display: flex;
- 
+  justify-content: flex-end;
 }
 
 nav a {
@@ -55,6 +60,13 @@ nav a {
 .about-me {
   padding: 3%;
 }
+
+.section-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
 
 .projects{
     display: flex;
@@ -79,6 +91,7 @@ nav a {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
+  color: black;
 }
 .web-image {
   width: 100%;
@@ -98,6 +111,12 @@ nav a {
 }
 .web-image:hover {
   opacity: .5;
+}
+
+footer {
+  padding: 10px 0 10px 0;
+  display: flex;
+  justify-content: space-around;
 }
 
 
